--- a/conf/nginx/graphite.conf
+++ b/conf/nginx/graphite.conf
@@ -21,5 +21,7 @@ server {
     add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
     add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type';
     add_header 'Access-Control-Allow-Credentials' 'true';
+    auth_basic "Restricted";
+    auth_basic_user_file /etc/nginx/.htpasswd;
   }
 }
