--- a/conf/graphite/carbon.conf
+++ b/conf/graphite/carbon.conf
@@ -29,6 +29,7 @@
 #   PID_DIR        = /var/run/
 #
 # LOCAL_DATA_DIR = /data/graphite/storage/whisper/
+LOCAL_DATA_DIR = /opt/graphite/storage/whisper/
 
 # Enable daily log rotation. If disabled, a kill -HUP can be used after a manual rotate
 ENABLE_LOGROTATION = True
