fatter storage schema

--- a/conf/graphite/storage-schemas.conf
+++ b/conf/graphite/storage-schemas.conf
@@ -9,8 +9,8 @@
 # CARBON_METRIC_PREFIX and CARBON_METRIC_INTERVAL settings
 [carbon]
 pattern = ^carbon\.
-retentions = 60:90d
+retentions = 60:10d
 
-[default_1min_for_1day]
+[cath_them_all]
 pattern = .*
-retentions = 60s:1d
+retentions = 1m:1d,5m:3d,15m:21d,30m:2y
