--- a/conf/graphite/storage-schemas.conf
+++ b/conf/graphite/storage-schemas.conf
@@ -11,6 +11,10 @@
 pattern = ^carbon\.
 retentions = 60:10d
 
+[sitespeed]
+pattern = ^sitespeed\.
+retentions = 5m:1d,15m:30d,30m:730d
+
 [cath_them_all]
 pattern = .*
 retentions = 5m:1d,15m:30d
