only store request timings for a week

--- a/conf/graphite/storage-schemas.conf
+++ b/conf/graphite/storage-schemas.conf
@@ -9,7 +9,11 @@
 # CARBON_METRIC_PREFIX and CARBON_METRIC_INTERVAL settings
 [carbon]
 pattern = ^carbon\.
-retentions = 60:10d
+retentions = 60:1d
+
+[timing_per_request]
+pattern = \.timings\.requests
+retentions = 5m:7d
 
 [sitespeed]
 pattern = ^sitespeed\.
