--- a/conf/graphite/storage-schemas.conf
+++ b/conf/graphite/storage-schemas.conf
@@ -12,8 +12,12 @@ pattern = ^carbon\.
 retentions = 60:1d
 
 [timing_per_request]
-pattern = \.timings\.requests
-retentions = 5m:7d
+pattern = ^sitespeed.*\.requests\..*\.timings
+retentions = 1s:1h,1m:1d,15m:7d
+
+[size_per_request]
+pattern = ^sitespeed.*\.requests\..*\.type
+retentions = 10m:1d,15m:7d
 
 [sitespeed]
 pattern = ^sitespeed\.
