setting MAX_CACHE_SIZE and MAX_CREATES_PER_MINUTE to better work on production

--- a/conf/graphite/carbon.conf
+++ b/conf/graphite/carbon.conf
@@ -45,7 +45,7 @@ USER =
 # Limit the size of the cache to avoid swapping or becoming CPU bound.
 # Sorts and serving cache queries gets more expensive as the cache grows.
 # Use the value "inf" (infinity) for an unlimited cache size.
-MAX_CACHE_SIZE = inf
+MAX_CACHE_SIZE = 1000000
 
 # Limits the number of whisper update_many() calls per second, which effectively
 # means the number of write requests sent to the disk. This is intended to
@@ -67,7 +67,7 @@ MAX_UPDATES_PER_SECOND = 500
 # database files to all get created and thus longer until the data becomes usable.
 # Setting this value high (like "inf" for infinity) will cause graphite to create
 # the files quickly but at the risk of slowing I/O down considerably for a while.
-MAX_CREATES_PER_MINUTE = inf
+MAX_CREATES_PER_MINUTE = 60
 
 LINE_RECEIVER_INTERFACE = 0.0.0.0
 LINE_RECEIVER_PORT = 2003
