--- a/conf/graphite/carbon.conf
+++ b/conf/graphite/carbon.conf
@@ -45,7 +45,7 @@ USER =
 # Limit the size of the cache to avoid swapping or becoming CPU bound.
 # Sorts and serving cache queries gets more expensive as the cache grows.
 # Use the value "inf" (infinity) for an unlimited cache size.
-MAX_CACHE_SIZE = 1000000
+MAX_CACHE_SIZE = 100000
 
 # Limits the number of whisper update_many() calls per second, which effectively
 # means the number of write requests sent to the disk. This is intended to
