In 4.0 we limit the amount of data, catching sitespeed_io will do fine.

--- a/conf/graphite/storage-schemas.conf
+++ b/conf/graphite/storage-schemas.conf
@@ -11,16 +11,8 @@
 pattern = ^carbon\.
 retentions = 60:1d
 
-[timing_per_request]
-pattern = ^sitespeed.*\.requests\..*\.timings
-retentions = 1s:1h,1m:1d,15m:7d
-
-[size_per_request]
-pattern = ^sitespeed.*\.requests\..*\.type
-retentions = 10m:1d,15m:7d
-
 [sitespeed]
-pattern = ^sitespeed\.
+pattern = ^sitespeed_io\.
 retentions = 5m:1d,15m:30d,30m:60d
 
 [cath_them_all]
