--- a/conf/graphite/storage-schemas.conf
+++ b/conf/graphite/storage-schemas.conf
@@ -13,7 +13,7 @@ retentions = 60:1d
 
 [sitespeed]
 pattern = ^sitespeed_io\.
-retentions = 5m:1d,15m:30d,30m:60d
+retentions = 10m:60d,30m:90d
 
 [cath_them_all]
 pattern = .*
