--- a/conf/graphite/storage-schemas.conf
+++ b/conf/graphite/storage-schemas.conf
@@ -15,6 +15,6 @@ retentions = 60:1d
 pattern = ^sitespeed_io\.
 retentions = 10m:60d,30m:90d
 
-[cath_them_all]
+[catch_them_all]
 pattern = .*
 retentions = 5m:1d,15m:30d
