--- a/conf/graphite/storage-schemas.conf
+++ b/conf/graphite/storage-schemas.conf
@@ -13,8 +13,8 @@ retentions = 60:1d
 
 [sitespeed]
 pattern = ^sitespeed_io\.
-retentions = 10m:60d,30m:90d
+retentions = 10m:40d
 
 [catch_them_all]
 pattern = .*
-retentions = 5m:1d,15m:30d
+retentions = 10m:8d
