Disable tags by default

--- a/conf/graphite/carbon.conf
+++ b/conf/graphite/carbon.conf
@@ -592,3 +592,5 @@ MAX_AGGREGATION_INTERVALS = 5
 
 # You can optionally set a ttl to this cache.
 # CACHE_METRIC_NAMES_TTL=600
+
+ENABLE_TAGS = False
