added updated retention configrations for our new sitespeed namespaces

--- a/conf/graphite/storage-schemas.conf
+++ b/conf/graphite/storage-schemas.conf
@@ -11,10 +11,22 @@
 pattern = ^carbon\.
 retentions = 60:1d
 
-[sitespeed]
-pattern = ^sitespeed_io\.
-retentions = 10m:40d
+[sitespeed_playground]
+pattern = ^sitespeed_playground\.
+retentions = 10m:60d
+
+[sitespeed_stage]
+pattern = ^sitespeed_stage\.
+retentions = 10m:60d,30m:180d,1h:1y,6h:5y
+
+[sitespeed_prod]
+pattern = ^sitespeed_stage\.
+retentions = 10m:60d,30m:180d,1h:1y,6h:5y
+
+[sitespeed_crux]
+pattern = ^sitespeed_crux\.
+retentions = 12h:5y
 
 [catch_them_all]
 pattern = .*
-retentions = 10m:8d
+retentions = 10m:2d
